fix: show color picker on mobile

--- a/style.css
+++ b/style.css
@@ -249,7 +249,6 @@ body {
   height: 44px;
   padding: 0;
   border: 0;
-  background: none;
   flex-shrink: 0;
 }
 #button-list input {
